V5.6.1
* Added new commands "/mh database reset-achievements" to delete all achievements data from database.
* Added new commands "/mh database reset-statistics" to delete all statistics data from database.
* Added new commands "/mh database reset-bounties" to delete all bounties from database.
V5.6.0
* Fixed NPE error in MobHuntingManager.java:1810
V5.5.9
* Fixed NPE error in Messages.java:516
V5.5.8
* Added MessageQueue for ActionBar messages.
* Shutdown process optimized
* Fixed bug where commands was not run second time the mob was killed.
V5.5.7
* Fixed bug. Could not sell dropped heads. (https://github.com/Rocologo/MobHunting/issues/368)
* Fixed NPE bug (https://github.com/Rocologo/MobHunting/issues/373) 
* Fixed bug. mh_Bounties was not created.
* Fixed grinding detection.
* MobHunting Heads and BagOfGold can now be dropped using the mouse.
V5.5.6
* Fixed bug: Bounties was not enabled on server start
* Fixed bug: mob.*.message: '' is not deleted anymore
* CloseInventory for Bounties and Achievements is delayed 1 tick to let the event be cancelled. 
V5.5.5
* There is a chance that a fish head is dropped in the water, when a fish is caught
* Convert Messages is improved (only when you run V5.5.5 first time)  
V5.5.4
* Improved config.yml version detection. This should fix the reseting messages problem.
* Improved backup of config.yml (https://github.com/Rocologo/MobHunting/issues/365)
V5.5.3
* Added permission to run commands (https://www.spigotmc.org/threads/mobhunting.46937/page-160#post-2913762)
* Fishing rewards works again
* Run Messages: and Permission: nodes can be deleted from config.yml if they are empty 
V5.5.2
* Bug fixing 
V5.5.1
* Fixed NPE error, when there is no commands to run. (https://www.spigotmc.org/threads/mobhunting.46937/page-158#post-2913466)
V5.5.0