@@ -2,6 +2,8 @@ V5.6.1
 * Added new commands "/mh database reset-achievements" to delete all achievements data from database.
 * Added new commands "/mh database reset-statistics" to delete all statistics data from database.
 * Added new commands "/mh database reset-bounties" to delete all bounties from database.
+* Fixed ticket 387 (https://github.com/Rocologo/MobHunting/issues/387)
+* Fixed ticket 386 (https://github.com/Rocologo/MobHunting/issues/386)
 V5.6.0
 * Fixed NPE error in MobHuntingManager.java:1810
 V5.5.9
